--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@ nav a.cta {
 
 <header>
 <a href="#home">
-  <img src="logo.png" alt="Ricca Neuda Logo" class="site-logo">
+  <img src="logo.png" alt="Jane Doe Logo" class="site-logo">
 </a>
 
 
@@ -820,7 +820,7 @@ nav a.cta {
     </div>
 
     <div class="hero-image">
-     <img src="profile.png" alt="Ricca Neuda" class="profile-photo">
+     <img src="profile.png" alt="Jane Doe Profile Photo" class="profile-photo">
     </div>
 
   </div>
@@ -836,7 +836,7 @@ nav a.cta {
   <span class="section-label">About Me</span>
 
   <h2 class="section-title">
-    Hi, I'm Ricca — your partner in growth
+    Hi, I'm Jane — your partner in growth
   </h2>
 </div>
 
@@ -1230,6 +1230,7 @@ slides.forEach(slide => {
 
 </body>
 </html>
+
 
 
 
